# zapified

./: .gitignore  README.md  app.py  cli.py  config.py  main.py  pyproject.toml  requirements.txt  sample_app.py  streamlit_app.py  streamlit_ui.py  test.db  ui_components.py  zapify.py  zapify_cli.py
.reports/: security_summary_20250625_004543.txt  security_summary_20250625_005201.txt  zap_report_20250625_004543.html  zap_report_20250625_004543.json  zap_report_20250625_005201.html  zap_report_20250625_005201.json
reports/: security_summary_20250623_212625.txt  security_summary_20250625_082322.txt  security_summary_20250625_083358.txt  security_summary_20250625_083820.txt  zap_report_20250623_212625.html  zap_report_20250623_212625.json  zap_report_20250625_082322.html  zap_report_20250625_082322.json  zap_report_20250625_083358.html  zap_report_20250625_083358.json  zap_report_20250625_083820.html  zap_report_20250625_083820.json
