[project]
name = "zapified"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker>=1.9.0",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "Flask>=3.1.1",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.2",
    "requests>=2.32.3",
    "six>=1.17.0",
    "urllib3>=2.4.0",
    "Werkzeug>=3.1.3",
    "zaproxy>=0.4.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "GitPython>=3.1.30",
    "python-owasp-zap-v2-4>=0.1.0",
]

